--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "next": "10.2.3",
+    "prettier": "^2.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.6.6",
+    "react-icons": "^4.2.0",
+    "react-image-gallery": "^1.0.9",
+    "sass": "^1.34.0",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.11.4",
+    "dotenv": "^10.0.0"
   }
 }
