--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.9",
     "sass": "^1.34.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.4",
