--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.6.6",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.9",
+    "react-slick": "^0.28.1",
     "sass": "^1.34.0",
     "styled-components": "^5.3.0",
     "sweetalert": "^2.1.2"
